# amazon_bedrock_redundant

./: .gitignore  .pre-commit-config.yaml  README.md  bedrock_and_xray_v2.py  cdk.json  pyproject.toml  samconfig.toml  template.yaml
config/: models.yaml
infrastructure/: app.py  bedrock_stack.py
src/: lambda_function.py  requirements.txt
src/config/: models.yaml
tests/: conftest.py  test_lambda_function.py
tests/config/: models.yaml
